--- a/flexmeasures/ui/static/css/flexmeasures.css
+++ b/flexmeasures/ui/static/css/flexmeasures.css
@@ -214,6 +214,10 @@ p.error {
     color: var(--secondary-color);
 }
 
+.navbar{
+    padding-top : 0 !important;
+    padding-bottom: 0 !important;
+}
 .navbar-default {
     background-color: var(--nav-default-background-color);
     border: none;
@@ -272,6 +276,14 @@ p.error {
 .navbar-brand a span {
     display: inline-block;
     color: var(--secondary-color) !important;
+}
+
+.fa-bars{
+    color: var(--white);
+}
+
+.d-none{
+    display: none !important;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
@@ -827,6 +839,42 @@ table.dataTable.nav-on-click tbody tr:hover {
     background-color: var(--nav-current-hover-background-color) !important;
     cursor: pointer;
 }
+.table tbody tr {
+    border-top-width: 1px;
+    border-color: var(--gray);
+}
+
+
+table.dataTable td {
+    padding: 8px; 
+}
+
+
+table.dataTable th {
+    padding: 10px;
+}
+
+
+table.dataTable button {
+    margin: 5px; 
+}
+
+
+table.dataTable input[type="checkbox"] {
+    margin: 5px; 
+}
+
+
+div.dataTables_filter input {
+    margin-left: 5px;
+    padding: 5px; 
+}
+
+
+div.dataTables_paginate {
+    margin-top: 10px; 
+}
+
 
 /* scrolling */
 .floatThead-wrapper table {
@@ -959,6 +1007,9 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
     vertical-align: top;
     border-top: 1px solid var(--light-gray) ;
 }
+.left-sidepanel-label{
+    margin-left: 20px !important;
+}
 
 
 /* --- End Tables ---- */
@@ -973,15 +1024,6 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
 
 .modal-backdrop {
     z-index: 999992 !important;
-}
-
-.close:focus, .close:hover {
-    color: var(--red);
-    transition: .3s;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
 }
 
 /* ---- End Modal ---- */
@@ -1324,13 +1366,18 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
     box-shadow: none;
     border-radius: 0px;
     text-align: center;
+    width: 100%;
     background: var(--primary-color);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     border-right: 1px solid var(--primary-border-color) !important;
-    transition: .4s;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     -ms-border-radius: 0px;
     -o-border-radius: 0px;
+    transition: .4s;
     -webkit-transition: .4s;
     -moz-transition: .4s;
     -ms-transition: .4s;
@@ -1342,13 +1389,6 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
 
 .header-action-button>div button:hover, .header-action-button>div button:focus {
     background: var(--primary-hover-color) !important;
-}
-
-.header-action-button>div button {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
 }
 
 .header-action-button>div:first-child button {
@@ -1460,6 +1500,12 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
 }
 .form-horizontal {
     margin-top: 30px;
+}
+
+.asset-form .form-group-bordered {
+    border: 2px solid rgb(169, 176, 176);
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 /* ---- End Asset Form ---- */
@@ -1856,6 +1902,17 @@ div.heading-group {
   margin: 0px;
   background: var(--light-gray);
 }
+.breadcrumb .dropdown-menu {
+    z-index: 1050;
+    position: absolute;
+}
+.breadcrumb .dropdown-menu li a {
+    text-decoration: none;
+    color: var(--white);
+}
+.breadcrumb li a {
+    text-decoration: none;
+}
 .breadcrumb a {
   color: var(--primary-color);
 }
@@ -1866,3 +1923,30 @@ div.heading-group {
   content: " > ";
   color: var(--primary-color);
 }
+
+
+/* Show tooltip titles on touch screens */
+[title] {
+	border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+	border-radius:2px;
+	position: relative;
+}
+body.touched [title]:hover > * {
+	user-select: auto
+}
+body.touched [title]:hover:after {
+	position: absolute;
+	top: 100%;
+	right: -10%;
+	content: attr(title);
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	background-color: white;
+	box-shadow: 1px 1px 3px;
+	padding: 0.3em;
+	z-index: 1;
+}
+
+.table-responsive{
+    padding: 20px;
+}
+
