--- a/flexmeasures/ui/templates/crud/account.html
+++ b/flexmeasures/ui/templates/crud/account.html
@@ -3,55 +3,56 @@
 {% block title %} Account overview {% endblock %} 
 {% block divs %}
 
-<div>
+<div class="pl-3">
     <form action="/accounts/auditlog/{{ account.id }}" method="get">
-            <button class="btn btn-sm btn-responsive btn-info delete-button" type="submit"
+            <button class="btn btn-sm btn-responsive btn-info delete-button m-4" type="submit"
              title="View history of user actions.">Audit log</button>
     </form>
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
             <div class="card">
                 <h3>Account</h3>
                 <small>Account: {{ account.name }}</small>
-
-                <table class="table table-striped table-responsive">
-                    <tbody>
-                        <tr>
-                            <td>
-                                ID
-                            </td>
-                            <td>
-                                {{ account.id }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Roles
-                            </td>
-                            <td>
-                                {{ account.account_roles | map(attribute='name') | join(", ") }}
-                            </td>
-                        </tr>
-                        {% if account.consultancy_account_name %}
-                        <tr>
-                            <td>
-                               Consultancy
-                            </td>
-                            <td>
-                                {{ account.consultancy_account_name }}
-                            </td>
-                        </tr>
-                        {% endif %}
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-striped table-responsive">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    ID
+                                </td>
+                                <td>
+                                    {{ account.id }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Roles
+                                </td>
+                                <td>
+                                    {{ account.account_roles | map(attribute='name') | join(", ") }}
+                                </td>
+                            </tr>
+                            {% if account.consultancy_account_name %}
+                            <tr>
+                                <td>
+                                    Consultancy
+                                </td>
+                                <td>
+                                    {{ account.consultancy_account_name }}
+                                </td>
+                            </tr>
+                            {% endif %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="card">
                 <h3>Users</h3>
 
-                <form class="text-right form-inline" role="form" target="" method="get" id="user-list-options">
+                <form class="ms-auto form-inline" role="form" target="" method="get" id="user-list-options">
                     <div class="checkbox">
                         <label>
                             <input name="include_inactive" {% if include_inactive %} checked="checked" {% endif %}
@@ -59,7 +60,8 @@
                         </label>
                     </div>
                 </form>
-                <table class="table table-striped table-responsive paginate nav-on-click" title="View/edit this user">
+                <div class="table-responsive">
+                <table class="table table-responsive paginate nav-on-click" title="View/edit this user">
                     <thead>
                         <tr>
                             <th>Username</th>
@@ -69,7 +71,7 @@
                             <th>Last Login</th>
                             <th>Last Seen</th>
                             <th>Active</th>
-                            <th class="hidden">URL</th>
+                            <th class="d-none">URL</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -97,7 +99,7 @@
                             <td>
                                 {{ user.active }}
                             </td>
-                            <td class="hidden">
+                            <td class="d-none">
                                 /users/{{ user.id }}
                             </td>
                         </tr>
@@ -105,9 +107,10 @@
                     </tbody>
                 </table>
             </div>
+            </div>
             <div class="card">
                 <h3>Assets</h3>
-
+                <div class="table-responsive">
                 <table class="table table-striped table-responsive paginate nav-on-click" title="View this asset">
                     <thead>
                         <tr>
@@ -127,7 +130,7 @@
                                 </form>
                                 {% endif %}
                             </th>
-                            <th class="hidden">URL</th>
+                            <th class="d-none">URL</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -162,7 +165,7 @@
                             </td>
                             <td class="text-right">
                             </td>
-                            <td class="hidden">
+                            <td class="d-none">
                                 /assets/{{ asset.id }}
                             </td>
                         </tr>
@@ -170,10 +173,11 @@
                     </tbody>
                 </table>
             </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="col-sm-2"></div>
+<div class="col-md-2"></div>
 {% block paginate_tables_script %} {{ super() }} {% endblock %}
 
 {% endblock %}
