--- a/flexmeasures/ui/templates/crud/account_audit_log.html
+++ b/flexmeasures/ui/templates/crud/account_audit_log.html
@@ -10,6 +10,7 @@
     <div class="row">
         <div class="sensors-asset card">
             <h3>History of actions for account <a href="/accounts/{{ account.id }}">{{ account.name }}</a></h3>
+            <div class="table-responsive">
             <table id="account_audit_log" class="table table-striped table-responsive paginate nav-on-click" title="View data">
                 <thead>
                     <tr>
@@ -34,6 +35,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
         </div>
     </div>
 </div>
