--- a/flexmeasures/ui/templates/crud/assets.html
+++ b/flexmeasures/ui/templates/crud/assets.html
@@ -7,79 +7,82 @@
 {% block divs %}
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2 on-top-md">
-            <div class="header-action-button">
-                <div>
-                    {% if user_can_create_assets %}
-                    <form action="/assets/new" method="get">
-                        <button class="btn btn-sm btn-responsive btn-success create-button" type="submit">Create new asset</button>
-                    </form>
-                    {% endif %}
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-2 on-top-md">
+      <div class="header-action-button mt-3">
+        <div>
+          {% if user_can_create_assets %}
+          <form action="/assets/new" method="get">
+            <button class="btn btn-sm btn-success mb-2 create-button" type="submit">Create new asset</button>
+          </form>
+          {% endif %}
         </div>
-        <div class="col-sm-8">
-            <div class="card">
-
-                <h3>Asset overview
-                    {% if account %}
-                    for account {{ account.name }}
-                    {% endif %}
-                </h3>
-                <table class="table table-striped table-responsive paginate nav-on-click" title="View this asset">
-                    <thead>
-                        <tr>
-                            <th><i class="left-icon">Name</i></th>
-                            <th class="no-sort">Location</th>
-                            <th>Asset id</th>
-                            <th>Account</th>
-                            <th class="no-sort">Sensors</th>
-                            <th class="no-sort">Status</th>
-                            <th class="hidden">URL</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for asset in assets: %}
-                        <tr>
-                            <td>
-                                <i class="{{ asset.generic_asset_type.name | asset_icon }} left-icon">{{ asset.name }}</i>
-                            </td>
-                            <td>
-                                {% if asset.latitude and asset.longitude %}
-                                LAT: {{ "{:,.4f}".format( asset.latitude ) }} LONG:
-                                {{ "{:,.4f}".format( asset.longitude ) }}
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ asset.id }}
-                            </td>
-                            <td>
-                                {% if asset.owner %}
-                                <a href="/accounts/{{ asset.owner.id }}" title="View this account">{{ asset.owner.name }}</a>
-                                {% else %}
-                                PUBLIC
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ asset.sensors | length }}
-                            </td>
-                            <td>
-                                <a href="/assets/{{ asset.id }}/status">
-                                    <button type="button" class="btn">Status</button>
-                                </a>
-                            </td>
-                            <td class="hidden">
-                                /assets/{{ asset.id }}
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="col-md-8 mt-3">
+      <div class="card">
+        <h3>Asset overview
+          {% if account %}
+            for account {{ account.name }}
+          {% endif %}
+        </h3>
+        <div class="table-responsive">
+          <table class="table table-striped paginate nav-on-click" title="View this asset">
+            <thead>
+              <tr>
+                <th scope="col"><i class="left-icon">Name</i></th>
+                <th class="no-sort">Location</th>
+                <th scope="col">Asset ID</th>
+                <th scope="col">Account</th>
+                <th class="no-sort">Sensors</th>
+                <th class="no-sort">Status</th>
+                <th class="d-none">URL</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for asset in assets: %}
+              <tr>
+                <td>
+                    <i class="{{ asset.generic_asset_type.name | asset_icon }} left-icon">{{ asset.name }}</i>
+                </td>
+                <td>
+                    {% if asset.latitude and asset.longitude %}
+                    LAT: {{ "{:,.4f}".format( asset.latitude ) }} LONG: {{ "{:,.4f}".format( asset.longitude ) }}
+                    {% endif %}
+                </td>
+                <td>
+                    {{ asset.id }}
+                </td>
+                <td>
+                    {% if asset.owner %}
+                    <a href="/accounts/{{ asset.owner.id }}" title="View this account">{{ asset.owner.name }}</a>
+                    {% else %}
+                    PUBLIC
+                    {% endif %}
+                </td>
+                <td>
+                    {{ asset.sensors | length }}
+                </td>
+                <td>
+                    <a href="/assets/{{ asset.id }}/status">
+                    <button type="button" class="btn btn-primary">Status</button>
+                    </a>
+                </td>
+                <td class="d-none">
+                    /assets/{{ asset.id }}
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 {% block paginate_tables_script %} {{ super() }} {% endblock %}
 
 {% endblock %}
+
+
