--- a/flexmeasures/ui/templates/views/sensors.html
+++ b/flexmeasures/ui/templates/views/sensors.html
@@ -7,24 +7,26 @@
 
 
 {% block divs %}
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    {% for breadcrumb in breadcrumb_info["ancestors"] %}
-      <li class="breadcrumb-item{% if loop.last %} dropdown active{% endif %}" {% if loop.last %}aria-current="page"{% endif %}>
-        {% if breadcrumb["url"] is not none and not loop.last %}
-          <a href="{{ breadcrumb['url'] }}">{{ breadcrumb['name'] }}</a>
-        {% else %}
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ breadcrumb['name'] }}<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            {% for sibling in breadcrumb_info["siblings"] %}
-              <li><a href="{{ sibling['url'] }}">{{ sibling["name"] }}</a></li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </li>
-    {% endfor %}
-  </ol>
-</nav>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb p-2">
+                {% for breadcrumb in breadcrumb_info["ancestors"] %}
+                <li class="breadcrumb-item{% if loop.last %} dropdown active{% endif %}" {% if loop.last %}aria-current="page"{% endif %}>
+                    {% if breadcrumb["url"] is not none and not loop.last %}
+                    <a href="{{ breadcrumb['url'] }}">{{ breadcrumb['name'] }}</a>
+                    {% else %}
+                    <a href="{{ breadcrumb['url'] }}" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" role="button">{{ breadcrumb['name'] }}</a>
+                    <ul class="dropdown-menu">
+                        {% for sibling in breadcrumb_info["siblings"] %}
+                        <li><a class="p-3 dropdown-item" href="{{ sibling['url'] }}">{{ sibling["name"] }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ol>
+        </nav>
+
+
       <div class="sensor-data charts text-center">
           <div class="row">
               <div class="alert alert-info" id="tzwarn" style="display:none;"></div>
@@ -37,8 +39,8 @@
                       <div class="left-sidepanel-label">Select dates</div>
                       <div class="sidepanel left-sidepanel">
                           <div id="datepicker"></div>
-                          <div class="dropdown header-action-button">
-                              <button class="btn dropdown-toggle" type="button" id="chartTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <div id="chart-type-picker" class="dropdown header-action-button">
+                              <button class="btn dropdown-toggle" type="button" id="chartTypeDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Select chart
                               </button>
                               <ul class="dropdown-menu center-aligned" aria-labelledby="chartTypeDropdown">
@@ -63,6 +65,80 @@
                     <div id="replay-time"></div>
                   </div>
               </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-8 offset-md-1">
+                <div class="copy-url" title="Click to copy the URL to the current time range to clipboard.">
+                    <script>
+                        function toIsoString(date) {
+                            var tzo = -date.getTimezoneOffset(),
+                                dif = tzo >= 0 ? '+' : '-',
+                                pad = function(num) {
+                                    return (num < 10 ? '0' : '') + num;
+                                };
+
+                            return date.getFullYear() +
+                                '-' + pad(date.getMonth() + 1) +
+                                '-' + pad(date.getDate()) +
+                                'T' + pad(date.getHours()) +
+                                ':' + pad(date.getMinutes()) +
+                                ':' + pad(date.getSeconds()) +
+                                dif + pad(Math.floor(Math.abs(tzo) / 60)) +
+                                ':' + pad(Math.abs(tzo) % 60);
+                        }
+
+                        $(window).ready(() => {
+                            picker.on('selected', (startDate, endDate) => {
+                                startDate = encodeURIComponent(toIsoString(startDate.toJSDate()));
+                                endDate = encodeURIComponent(toIsoString(endDate.toJSDate()));
+                                var base_url = window.location.href.split("?")[0];
+                                var new_url = `${base_url}?start_time=${startDate}&end_time=${endDate}`;
+                                
+                                // change current url without reloading the page
+                                window.history.pushState({}, null, new_url);
+                            });
+
+                        });
+
+                        function copyUrl(event) {
+                            event.preventDefault();
+
+                            if (!window.getSelection) {
+                                alert('Please copy the URL from the location bar.');
+                                return;
+                            }
+                            const dummy = document.createElement('p');
+
+                            var startDate = encodeURIComponent(toIsoString(picker.getStartDate().toJSDate()));
+                            // add 1 day to end date as datepicker does not include the end date day
+                            var endDate = picker.getEndDate();
+                            endDate.setDate(endDate.getDate() + 1);
+                            endDate = encodeURIComponent(toIsoString(endDate.toJSDate()));
+                            var base_url = window.location.href.split("?")[0];
+                            dummy.textContent = `${base_url}?start_time=${startDate}&end_time=${endDate}`
+                            document.body.appendChild(dummy);
+
+                            const range = document.createRange();
+                            range.setStartBefore(dummy);
+                            range.setEndAfter(dummy);
+
+                            const selection = window.getSelection();
+                            // First clear, in case the user already selected some other text
+                            selection.removeAllRanges();
+                            selection.addRange(range);
+
+                            document.execCommand('copy');
+                            document.body.removeChild(dummy);
+
+                            $("#message").show().delay(1000).fadeOut();
+                        }
+                    </script>
+                    <a href="#" onclick="copyUrl(event)" style="display: block; text-align: center;">
+                        <i class="fa fa-link"></i>
+                    </a>
+                    <div id="message" style="display: none; text-align: center;">The URL to the time range currently shown has been copied to your clipboard.</div>
+                </div>
+            </div>
           </div>
           <hr>
       </div>
