--- a/flexmeasures/ui/templates/views/status.html
+++ b/flexmeasures/ui/templates/views/status.html
@@ -25,9 +25,10 @@
                         <tr>
                             <th>Name</th>
                             <th>Asset name</th>
+                            <th>Relation to asset</th>
                             <th class="no-sort" title="This is the knowledge time of the most recent event recorded">Time of last value</th>
                             <th class="text-right no-sort">Status</th>
-                            <th class="hidden">URL</th>
+                            <th class="d-none">URL</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -40,6 +41,8 @@
                                 {{ sensor.asset_name }}
                             </td>
                             <td>
+                                {{ sensor.relation }}
+                            <td>
                                 <span title="{{ sensor['staleness_since'] }}">{{ sensor["staleness_since"] | naturalized_datetime }}</span>
                             </td>
                             <td class="text-right">
@@ -51,39 +54,37 @@
                                     {% endif %}
                                 </span>
                             </td>
-                            <td class="hidden">
+                            <td class="hidden d-none invisible" style="display:none;">
                                 /sensors/{{ sensor.id }}
                             </td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-                <h3>Latest scheduling jobs of {{ asset.name }}</h3>
-                <table id="scheduling_jobs" class="table table-striped table-responsive paginate nav-on-click">
+                <h3>Latest jobs of {{ asset.name }}</h3>
+                <table id="scheduling_forecasting_jobs" class="table table-striped table-responsive paginate nav-on-click">
                     <thead>
                         <tr>
-                            <th>Job id</th>
-                            <th>Asset id</th>
-                            <th>Sensor or asset</th>
                             <th>Created at</th>
+                            <th>Queue</th>
+                            <th>Entity</th>
                             <th class="text-right no-sort">Status</th>
-                            <th class="hidden">URL</th>
+                            <th class="text-right">Info</th>
+                            <th class="d-none">URL</th>
+                            <th class="d-none">Created at for sort</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for job_data in scheduling_job_data: %}
+                        {% for job_data in jobs_data: %}
                         <tr title="View data">
-                            <td>
-                                {{ job_data.job_id }}
-                            </td>
-                            <td>
-                                {{ job_data.asset_id }}
-                            </td>
-                            <td>
-                                {{ job_data.asset_or_sensor_type }}
-                            </td>
                             <td title="Enqueued at: {{ job_data.enqueued_at}}">
                                 {{ job_data.enqueued_at | naturalized_datetime }}
+                            </td>
+                            <td>
+                                {{ job_data.queue }}
+                            </td>
+                            <td>
+                                {{ job_data.entity }}
                             </td>
                             <td class="text-right"
                                 title="{{ job_data['err'] is none and job_data['status'] or job_data['status'] + ' : ' + job_data['err'] }}">
@@ -97,54 +98,32 @@
                                     {% endif %}
                                 </span>
                             </td>
-                            <td class="hidden">
+                            <td class="text-right">
+                                <!-- Button -->
+                                <a href="#" class="btn btn-default btn-success" role="button" id="job-metadata-info-button" data-bs-target="#JobMetadataModal-{{ job_data['metadata_hash'] }}" data-bs-toggle="modal">
+                                    Info
+                                </a>
+                                
+                                <!-- Modal -->
+                                <div class="modal fade" id="JobMetadataModal-{{ job_data['metadata_hash'] }}" tabindex="-1" role="dialog" aria-labelledby="JobMetadataInfo" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="JobMetadataInfo">Info</h5>
+                                                <button id="modalCloseButton" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onmousedown="event.stopPropagation(); event.preventDefault();"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <pre>{{ job_data['metadata'] }}</pre>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="hidden d-none invisible" style="display:none;">
                                 /tasks/0/view/job/{{ job_data.job_id }}
                             </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                <h3>Latest forecasting jobs of {{ asset.name }}</h3>
-                <table id="forecasting_jobs" class="table table-striped table-responsive paginate nav-on-click">
-                    <thead>
-                        <tr>
-                            <th>Job id</th>
-                            <th>Asset id</th>
-                            <th>Sensor or asset</th>
-                            <th>Created at</th>
-                            <th class="text-right no-sort">Status</th>
-                            <th class="hidden">URL</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for job_data in forecasting_job_data: %}
-                        <tr title="View data">
-                            <td>
-                                {{ job_data.job_id }}
-                            </td>
-                            <td>
-                                {{ job_data.asset_id }}
-                            </td>
-                            <td>
-                                {{ job_data.asset_or_sensor_type }}
-                            </td>
-                            <td title="Enqueued at: {{ job_data.enqueued_at}}">
-                                {{ job_data.enqueued_at | naturalized_datetime }}
-                            </td>
-                            <td class="text-right"
-                                title="{{ job_data['err'] is none and job_data['status'] or job_data['status'] + ' : ' + job_data['err'] }}">
-                                <span>
-                                    {% if job_data["status"] == "finished" %}
-                                    🟢
-                                    {% elif job_data["status"] == "failed" %}
-                                    🔴
-                                    {% else %}
-                                    🟡
-                                    {% endif %}
-                                </span>
-                            </td>
-                            <td class="hidden">
-                                /tasks/0/view/job/{{ job_data.job_id }}
+                            <td class="hidden d-none invisible" style="display:none;">
+                                {{ job_data.enqueued_at }}
                             </td>
                         </tr>
                         {% endfor %}
@@ -156,17 +135,12 @@
             </div>
         </div>
     </div>
-
-
 </div>
-
 
 <!-- sort scheduling and forecasting jobs by 'Created at' column -->
 <script>
     $(document).ready(function() {
-        $('#scheduling_jobs').DataTable({"order": [[ 3, "desc" ]]});
-        $('#forecasting_jobs').DataTable({"order": [[ 3, "desc" ]]});
+        $('#scheduling_forecasting_jobs').DataTable({"order": [[ 6, "desc" ]]});
     });
 </script>
-
 {% endblock %}
