--- a/flexmeasures/ui/templates/crud/assets.html
+++ b/flexmeasures/ui/templates/crud/assets.html
@@ -34,7 +34,7 @@
                 <th class="no-sort">Location</th>
                 <th scope="col">Asset ID</th>
                 <th scope="col">Account</th>
-                <th class="no-sort">Sensors</th>
+                <th class="no-sort"># Sensors</th>
                 <th class="no-sort">Status</th>
                 <th class="d-none">URL</th>
               </tr>
