--- a/flexmeasures/ui/templates/crud/network.html
+++ b/flexmeasures/ui/templates/crud/network.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% set active_page = "networkresources" %}
+{% set active_page = "networks" %}
 
-{% block title %} {{network_resource.name}} {% endblock %}
+{% block title %} {{network.name}} {% endblock %}
 
 {% block divs %}
 
@@ -20,21 +20,21 @@
     <div class="row">
         <div class="col-md-2 on-top-md">
             <div class="header-action-button">
-                {% if user_can_create_network_resources %}
+                {% if user_can_create_networks %}
                 <div>
-                    <form action="/networkresources/new" method="get">
-                        <button class="btn btn-sm btn-responsive btn-success create-button mb-3" type="submit">Create network resource</button>
+                    <form action="/networks/new" method="get">
+                        <button class="btn btn-sm btn-responsive btn-success create-button mb-3" type="submit">Create network</button>
                     </form>
                 </div>
                 {% endif %}
-                {% if user_can_delete_network_resource %}
+                {% if user_can_delete_network %}
                 <div>
-                    <form action="/networkresources/delete_with_data/{{ network_resource.id }}" method="get">
-                        <button id="delete-network-resource-button" class="btn btn-sm btn-responsive btn-danger delete-button" type="submit">Delete this network resource</button>
+                    <form action="/networks/delete_with_data/{{ network.id }}" method="get">
+                        <button id="delete-network-resource-button" class="btn btn-sm btn-responsive btn-danger delete-button" type="submit">Delete this network</button>
                     </form>
                     <script>
                         $("#delete-network-resource-button").click(function () {
-                            if (confirm("Are you sure you want to delete this network resource?")) {
+                            if (confirm("Are you sure you want to delete this network?")) {
                                 return true;
                             }
                             else {
@@ -46,46 +46,46 @@
                 {% endif %}
             </div>
             <div class="sidepanel-container">
-                <div class="left-sidepanel-label" style="width: 600px;">Edit Network Resource</div> <!-- TODO: do not use style="" -->
+                <div class="left-sidepanel-label" style="width: 350px;">Edit Network</div> <!-- TODO: do not use style="" -->
                 <div class="sidepanel left-sidepanel" style="width: 300px;"><!-- TODO: do not use style="" -->
-                    <form class="form-horizontal" method="POST" action="/networkresources/{{ network_resource.id }}">
-                        {{ network_resource_form.csrf_token }}
-                        {{ network_resource_form.hidden_tag() }}
+                    <form class="form-horizontal" method="POST" action="/networks/{{ network.id }}">
+                        {{ network_form.csrf_token }}
+                        {{ network_form.hidden_tag() }}
                         <fieldset>
                             <div class="asset-form">
 
-                                <h3>Edit {{ network_resource.name }}</h3>
-                                <small>Owned by account: {{ network_resource.account_id | accountname }} (ID: {{ network_resource.account_id }})</small>
+                                <h3>Edit {{ network.name }}</h3>
+                                <small>Owned by account: {{ network.account_id | accountname }} (ID: {{ network.account_id }})</small>
 
                                 <div class="form-group">
-                                    {{ network_resource_form.name.label(class="col-sm-6 control-label") }}
+                                    {{ network_form.name.label(class="col-sm-6 control-label") }}
                                     <div class="col-md-3">
-                                        {{ network_resource_form.name(class_="form-control") }}
-                                        {% for error in network_resource_form.errors.name %}
+                                        {{ network_form.name(class_="form-control") }}
+                                        {% for error in network_form.errors.name %}
                                         <span style="color: red;">[{{error}}]</span>
                                         {% endfor %}
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="assset-type" class="col-sm-6 control-label">Network Resource Type</label>
+                                    <label for="assset-type" class="col-sm-6 control-label">Network ID</label>
                                      <div class="col-md-6">
                                         <input class="form-control" id="network-resource-type-id" name="network-resource-type" type="text"
-                                            value="{{ network_resource.network_resource_type.name }}" disabled></input>
+                                            value="{{ network.id }}" disabled></input>
                                      </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="network-resource-id" class="col-sm-6 control-label">Network Resource id</label>
-                                    <div class="col-md-6">
-                                        <input class="form-control" id="network-resource-id" name="network-resource-id" type="text" value="{{ network_resource.id }}"
-                                            disabled></input>
-                                    </div>
+                                    <label for="assset-type" class="col-sm-6 control-label">Account ID</label>
+                                     <div class="col-md-6">
+                                        <input class="form-control" id="network-resource-type-id" name="network-resource-type" type="text"
+                                            value="{{ network.account_id }}" disabled></input>
+                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    {{ network_resource_form.attributes.label(class="col-sm-6 control-label") }}
+                                    {{ network_form.network_resources.label(class="col-sm-6 control-label") }}
                                     <div class="col-md-3">
-                                        {{ network_resource_form.attributes(class_="form-control") }}
-                                        {% for error in network_resource_form.errors.attributes %}
-                                        <span style="color: red;">[{{error}}]</span>
+                                        {{ network_form.network_resources(style="list-style-type: none", class="") }}
+                                        {% for error in network_form.errors.network_resources %}
+                                            <span style="color: red;">[{{error}}]</span>
                                         {% endfor %}
                                     </div>
                                 </div>
@@ -98,8 +98,8 @@
         </div>
         <div class="col-md-8">
             <div class="user-data-table card">
-                <h2>Network Resource overview</h2>
-                <small>Network Resource: {{ network_resource.name }}</small>
+                <h2>Network overview</h2>
+                <small>Network: {{ network.name }}</small>
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <tbody>
@@ -108,7 +108,7 @@
                                     Name
                                 </td>
                                 <td>
-                                    {{ network_resource.name }}
+                                    {{ network.name }}
                                 </td>
                             </tr>
                             <tr>
@@ -116,7 +116,7 @@
                                     Id
                                 </td>
                                 <td>
-                                    {{ network_resource.id }}
+                                    {{ network.id }}
                                 </td>
                             </tr>
                             <tr>
@@ -124,15 +124,15 @@
                                     Account
                                 </td>
                                 <td>
-                                    <a href="/accounts/{{ network_resource.account_id }}">{{ network_resource.account_id }}</a>
+                                    <a href="/accounts/{{ network.account_id }}">{{ network.account_id }}</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    Type
+                                    Network Resources
                                 </td>
                                 <td>
-                                    {{ network_resource.network_resource_type.name }}
+                                    {{ network.network_resources }}
                                 </td>
                             </tr>
                             
