--- a/flexmeasures/ui/templates/defaults.jinja
+++ b/flexmeasures/ui/templates/defaults.jinja
@@ -39,11 +39,13 @@
 {% if current_user.is_authenticated %}
     {% set has_admin_reader_rights = True if (current_user.has_role('admin') or current_user.has_role('admin-reader') or FLEXMEASURES_MODE == "demo") %}
     {% set is_consultant = True if current_user.has_role('consultant') %}
-    {% do navigation_bar.append(('networkresources', 'networkresources', '', 'Network Resource', 'plug')) %}
+    {% do navigation_bar.append(('networkresources', 'networkresources', '', 'Network Resources', 'life-ring')) %}
+    {% do navigation_bar.append(('networks', 'networks', '', 'Networks', 'list')) %}
     {% if has_admin_reader_rights %}
         {% do navigation_bar.append(('assets', 'assets', 'Assets', '', 'list-ul'))  %}
         {% do navigation_bar.append(('users', 'users', 'Users', '', 'users')) %}
         {% do navigation_bar.append(('tasks', 'tasks', 'Tasks', '', 'tasks')) %}
+        {% do navigation_bar.append(('opf', 'opf', 'OPF', '', 'star')) %}
     {% endif %}
     {% if is_consultant or has_admin_reader_rights %}
         {% do navigation_bar.append(('accounts', 'accounts', 'Accounts', '', 'cubes')) %}
